MCR-3463 use Java NIO API for file system resource provider